--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# docker-compose.yml
 x-environment: &oncall-environment
   DATABASE_TYPE: sqlite3
   BROKER_TYPE: redis
@@ -15,6 +16,16 @@ x-environment: &oncall-environment
   GRAFANA_API_URL: http://grafana:3000
 
 services:
+  nginx:
+    image: openresty/openresty:alpine
+    restart: always
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - grafana
+
   engine:
     image: grafana/oncall
     restart: always
@@ -86,8 +97,7 @@ services:
   grafana:
     image: "grafana/${GRAFANA_IMAGE:-grafana:latest}"
     restart: always
-    ports:
-      - "3000:3000"
+    # Ports are removed, Nginx handles external traffic
     environment:
       GF_FEATURE_TOGGLES_ENABLE: externalServiceAccounts
       GF_SECURITY_ADMIN_USER: ${GRAFANA_USER:-admin}
