Enhance Nginx configuration to support user and service account authentication. Rename internal auth location to /_user_auth and add new /_sa_auth location for service account requests, enforcing authorization header checks and logging for successful authentications.

--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@ server {
                 local original_body = ngx.req.get_body_data() or ""
                 
                 -- Make internal auth request
-                local res = ngx.location.capture("/_auth", {
+                local res = ngx.location.capture("/_user_auth", {
                     method = ngx.HTTP_GET,
                     args = "",
                     always_forward_body = false,
@@ -63,6 +63,37 @@ server {
                 
                 ngx.log(ngx.ERR, "Auth successful for: ", ngx.var.request_method, " ", ngx.var.uri)
             end
+
+            -- Check if the request is a service account request
+            local authorization_header = ngx.var.http_authorization
+            if authorization_header then
+                -- authorization header value must start with glsa_ otherwise reject the request because only service accounts are allowed
+                if not string.match(authorization_header, "^glsa_") then
+                    ngx.log(ngx.ERR, "Unauthorized: Invalid Authorization header")
+                    ngx.exit(ngx.HTTP_UNAUTHORIZED) -- 401
+                end
+                
+                -- make a sub-request to our internal proxy location with the authorization header
+                local res = ngx.location.capture("/_sa_auth", {
+                    method = ngx.HTTP_GET,
+                    args = "",
+                    always_forward_body = false,
+                    copy_all_vars = false,
+                    copy_all_vars_if_subrequest = false,
+                    headers = {
+                        ["X-Original-URI"] = ngx.var.uri,
+                        ["X-Original-Method"] = ngx.var.request_method
+                    }
+                })
+
+                if not res or res.status ~= ngx.HTTP_OK then
+                    ngx.log(ngx.ERR, "Unauthorized: Service account token request")
+                    ngx.exit(ngx.HTTP_UNAUTHORIZED) -- 401
+                end
+
+                ngx.log(ngx.ERR, "Service account authentication successful")
+                ngx.exit(ngx.HTTP_OK)
+            end
         }
         
         # Proxy all requests to Grafana
@@ -73,8 +104,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Internal-only location for running our authentication logic
-    location = /_auth {
+    # Internal-only location for running user authentication logic
+    location = /_user_auth {
         internal; # Can only be accessed by other Nginx locations
 
         content_by_lua_block {
@@ -82,7 +113,7 @@ server {
 
             -- Get the cookie from the original request headers
             local cookie = ngx.var.http_cookie
-            ngx.log(ngx.ERR, "_auth: Received cookie: ", cookie or "none")
+            ngx.log(ngx.ERR, "_user_auth: Received cookie: ", cookie or "none")
             
             if not cookie or cookie == "" then
                 ngx.log(ngx.ERR, "Unauthorized: Missing session cookie")
@@ -245,8 +276,35 @@ server {
                 ngx.exit(ngx.HTTP_FORBIDDEN) -- 403
             end
 
-            -- 8. If all rules pass, return 200 OK to Nginx's auth_request module.
+            -- If all rules pass, return 200 OK to Nginx's auth_request module.
             ngx.log(ngx.ERR, "Auth successful for user: ", user.login)
+            ngx.exit(ngx.HTTP_OK)
+        }
+    }
+
+        # Internal-only location for running service account authentication logic
+    location = /_sa_auth {
+        internal;
+
+        content_by_lua_block {
+            -- Get the original request URI from custom header
+            local original_uri = ngx.var.http_x_original_uri
+            local original_method = ngx.var.http_x_original_method
+            
+            if not original_uri then
+                ngx.log(ngx.ERR, "No original URI provided in service account auth request")
+                ngx.exit(ngx.HTTP_INTERNAL_SERVER_ERROR)
+            end
+            
+            ngx.log(ngx.ERR, "Service account auth check for: ", original_method or "unknown", " ", original_uri)
+            
+            -- Only allow requests to /api/plugins/grafana%-oncall%-app/resources/schedules/
+            if not string.match(original_uri, "^/api/plugins/grafana%-oncall%-app/resources/schedules") then
+                ngx.log(ngx.ERR, "Unauthorized: Request URI is not allowed, URI: ", original_uri)
+                ngx.exit(ngx.HTTP_FORBIDDEN) -- 403
+            end
+
+            ngx.log(ngx.ERR, "Service account authentication successful for URI: ", original_uri)
             ngx.exit(ngx.HTTP_OK)
         }
     }
